# dynimp

./: .gitmodules  README.md
dynimp/: Program.cs  dynimp.sln
dynimp/dynimp/: Program.cs  dynimp.csproj
dynimp/dynimp/Models/: DynImp.cs  ModuleImportDescriptor.cs
dynimp/dynimp/Utils/: ArgumentParser.cs  Logger.cs  VCTools.cs
dynimp/samples/: example.dynimp.json
libdynimp/: CMakeLists.txt
libdynimp/inc/: Loader.hpp
libdynimp/src/: Loader.cpp
